--- a/index.html
+++ b/index.html
@@ -1,3 +1,18 @@
+<br>
+<br>Ahoj já jsem Smilos a jsem YouTuber!
+<br>Jsem majitelem sociální sítě Smicial!
 
-<body>Již brzy!
-</body>
+<br>
+<br>
+<br>
+<br> Vyber co chceš udělat:
+<br> 
+<br>
+<button href="hry.html" class="btn">Zahrát si hru</button>
+<button href="socialni-site.html" class="btn">Sociální sítě</button>
+<button href="http://www.smicial.wz.cz" class="btn">Smicial</button>
+
+<br>
+<br>
+<br>
+<br> Na tomto webu stále pracuji 🔨
