--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<title>Smilosův web!</title>
+<h1>Vítám tě na mém webu!</h1>
 <br>
 <br>Ahoj já jsem Smilos a jsem YouTuber!
 <br>Jsem majitelem sociální sítě Smicial!
