--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <br> Vyber co chceš udělat:
 <br> 
 <br>
-<button href="hry.html" class="btn">Zahrát si hru</button>
-<button href="socialni-site.html" class="btn">Sociální sítě</button>
-<button href="http://www.smicial.wz.cz" class="btn">Smicial</button>
+<button onclick="window.location.href='hry.html'">Zahrát si hru</button>
+<button onclick="window.location.href='http://www.smicial.wz.cz'">Sociální sítě</button>
+<button onclick="window.location.href='http://www.smicial.wz.cz'">Smicial</button>
 
 <br>
 <br>
