--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <br> 
 <br>
 <button onclick="window.location.href='hry.html'">Zahrát si hru</button>
-<button onclick="window.location.href='http://www.smicial.wz.cz'">Sociální sítě</button>
+<button onclick="window.location.href='socialni-site.html'">Sociální sítě</button>
 <button onclick="window.location.href='http://www.smicial.wz.cz'">Smicial</button>
 
 <br>
