--- a/prejit-na-smicial.html
+++ b/prejit-na-smicial.html
@@ -1,5 +1,5 @@
-<title>Přejít na Smicial?</title)
+<title>Přejít na Smicial?</title>
+<h1>Chceš přejít na Smicial?</h1>
 <br>
 <br>
-<br>
-<button onclick="window.location.href='http://smicial.wz.cz/'">Přejít na Smicial</button>
+<br> <h1><a href="http://smicial.wz.cz/">Ano!</a></h1>
