--- a/axomod/axomod.html
+++ b/axomod/axomod.html
@@ -1,1 +1,29 @@
+<title>AxoMod</title>
 
+
+</div>
+<h1>Invite AxoMod</h1>
+
+<div id="middle">
+<div id="middle">
+  <button onclick="window.location.href='https://discord.com/oauth2/authorize?client_id=1204105298005073963&scope=applications.commands%20bot&permissions=8'" style="font-size: 30px;">Invite!</button>
+</div>
+  <br>
+  
+<img src="axomodlogo.png" alt="Logo">
+</div>
+<html>
+<head>
+<style>
+h1 {text-align: center;}
+p {text-align: center;}
+div {text-align: center;}
+  
+</style>
+</head>
+<body>
+
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
+</body>
+</html>
