--- a/smilosOS/verze/1.0.html
+++ b/smilosOS/verze/1.0.html
@@ -1,1 +1,2 @@
+<title>SmilosOS 1.0</title>
 <iframe src="https://scratch.mit.edu/projects/927031628/embed" allowtransparency="true" width="100%" height="100%" frameborder="0" scrolling="no" allowfullscreen></iframe>
