--- a/SmilosOS.html
+++ b/SmilosOS.html
@@ -1,1 +1,17 @@
+<title>SmilosOS</title>
+<h1>SmilosOS</h1>
+<br>SmilosOS je simulátor operačního systému od YouTubera Smilose!
+<br>
+<br><h2>Verze:</h2>
+<br>
+<button style="font-size: 20px;">
+    <a href="https://smilos71.github.io/w/smilosOS/verze/1.0.html" style="text-decoration: none; color: black;">1.0</a>
+</button>
 
+<button style="font-size: 20px;">
+    <a href="" style="text-decoration: none; color: black;">2.0 (již brzy!)</a>
+</button>
+<br>
+<br>
+<br> SmilosOS se doporučuje hrát na pořítači!
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
