--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
     <div class="content">
         <p>Vyber si, co chceš udělat:</p>
-        <button onclick="window.location.href='hry.html'">Zahrát si hru</button>
+        <button onclick="window.location.href='smilos71.github.io/hry/kamennuzkypapir.html'">Zahrát si hru</button>
         <button onclick="window.location.href='socialni-site.html'">Sociální sítě</button>
         <button onclick="window.location.href='http://www.smicial.wz.cz'">Smicial</button>
         <button onclick="window.location.href='kalkulacka.html'">Kalkulačka</button>
