--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
         <button onclick="window.location.href='kalkulacka.html'">Kalkulačka</button>
         <br>
         <button onclick="window.location.href='qrgenerator.html'">Generátor QR kódů</button>
+        <button onclick="window.location.href='blog.html'">Blog</button>
     </div>
 
     <div class="content">
