--- a/socialni-site.html
+++ b/socialni-site.html
@@ -1,17 +1,65 @@
-<title>Smilos - Sociání sítě</title>
-<h1>Sociání sítě Smilose:</h1>
-<br>
-<br> <a href="https://www.youtube.com/smilosik_">YouTube</a>
-<a href="https://discord.gg/pJ83pcczjX">Discord</a>
-<a href="http://smicial.wz.cz/clenove/smiloscz/">Smicial profile</a>
-<br>
-<br>
-<br> <h1>Smicial:</h1>
-<br>
-<br> <a href="http://smicial.wz.cz/">Web</a>
-<br> <a href="http://smicial.wz.cz/discord/">Discord</a>
-<br> <a href="http://smicial.wz.cz/public-chat/">Public chat</a>
-<br> <a href="http://smicial.wz.cz/muj-ucet/">Přihlášení</a>
-<br> <a href="http://smicial.wz.cz/27-2/">Registrace</a>
-<br> <a href="http://smicial.wz.cz/blog/">Blog</a>
-<br> <a href="http://smicial.wz.cz/store/">Store</a>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Smilos - Sociální sítě</title>
+<style>
+    body {
+        font-family: Arial, sans-serif;
+        margin: 0;
+        padding: 0;
+    }
+    .container {
+        max-width: 800px;
+        margin: 20px auto;
+        padding: 20px;
+        background-color: #f9f9f9;
+        border: 1px solid #ddd;
+        border-radius: 5px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    }
+    h1 {
+        color: #333;
+        margin-bottom: 20px;
+    }
+    a {
+        display: block;
+        color: #fcbf49;
+        text-decoration: none;
+        margin-bottom: 10px;
+        padding: 10px 20px;
+        border: 1px solid #fcbf49;
+        border-radius: 5px;
+        transition: background-color 0.3s, color 0.3s;
+    }
+    a:hover {
+        background-color: #fcbf49;
+        color: #fff;
+    }
+</style>
+</head>
+<body>
+
+<div class="container">
+
+    <h1>Sociální sítě Smilose:</h1>
+
+    <a href="https://www.youtube.com/smilosik_">YouTube</a>
+    <a href="https://discord.gg/pJ83pcczjX">Discord</a>
+    <a href="http://smicial.wz.cz/clenove/smiloscz/">Smicial profile</a>
+
+    <h1>Smicial:</h1>
+
+    <a href="http://smicial.wz.cz/">Web</a>
+    <a href="http://smicial.wz.cz/discord/">Discord</a>
+    <a href="http://smicial.wz.cz/public-chat/">Public chat</a>
+    <a href="http://smicial.wz.cz/muj-ucet/">Přihlášení</a>
+    <a href="http://smicial.wz.cz/27-2/">Registrace</a>
+    <a href="http://smicial.wz.cz/blog/">Blog</a>
+    <a href="http://smicial.wz.cz/store/">Store</a>
+
+</div>
+
+</body>
+</html>
