--- a/webs/buildcraft/index.html
+++ b/webs/buildcraft/index.html
@@ -1,1 +1,77 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Buildcraft 5</title>
+<link href="style.css" rel="stylesheet" type="text/css" />
+<style>
+    body {
+        font-family: Arial, sans-serif;
+        margin: 0;
+        padding: 0;
+    }
+    .container {
+        max-width: 800px;
+        margin: 20px auto;
+        padding: 20px;
+        background-color: #f9f9f9;
+        border: 1px solid #ddd;
+        border-radius: 5px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    }
+    h1 {
+        font-size: 24px;
+        color: #333;
+        margin-bottom: 20px;
+    }
+    p {
+        color: #666;
+        line-height: 1.6;
+    }
+    a {
+        display: block;
+        color: #fcbf49;
+        text-decoration: none;
+        margin-bottom: 10px;
+        padding: 10px 20px;
+        border: 1px solid #fcbf49;
+        border-radius: 5px;
+        transition: background-color 0.3s, color 0.3s;
+    }
+    a:hover {
+        background-color: #fcbf49;
+        color: #fff;
+    }
+</style>
+</head>
+<body>
+
+<div class="container">
+
+    <h1>Vítejte na serveru BuildCraft!</h1>
+
+    <p>Minecraftový server YouTubera Antyxe, který má denně 8+ online hráčů! Hosting našeho serveru se jmenuje Aternos. IP adresa serveru je: buildcraft5.aternos.me. Doporučená verze je 1.20.4, ale 1.18.1 a vyšší taky fungují (možná i nižší). Už nevím, co sem napsat :D</p>
+
+    <a href="pravidla.html">📚 | Pravidla</a>
+    <a href="https://aternos.org">🏢 | Hosting</a>
+    <a href="https://www.youtube.com/@antyx1">👑 | Antyx</a>
+    <a href="https://www.youtube.com/channel/UCurbOZNaa-KDFpyl7luXdTw">😴 | Tvůrce webu</a>
+    <a href="https://discord.gg/33jDhZNhZ2">💬 | Discord</a>
+    <a href="kolonie.html">🏰 | Kolonie</a>
+
+    <p>(želvičky jsou nejlepší 🐢)</p>
+
+    <br>
+    <br>
+    <br>
+
+    <a href="http://smicial.wz.cz" style="font-size: 20px;">Sponzor: Smicial</a>
+
+    <h1 style="font-size: 12px;">Pokud vám Smicial nejede, klikněte na Pokračovat na nezabezpečený web</h1>
+
+</div>
+
+</body>
+</html>
 
