--- a/webs/buildcraft/pravidla.html
+++ b/webs/buildcraft/pravidla.html
@@ -58,33 +58,49 @@
     <br>
 
     <h2>Obecná pravidla:</h2>
-    <p>1.1 Je zakázáno používat clienty, cheaty, hack clienty, módy a datapacky, které by ulehčovali hru. (1 až 3 varování)</p>
-    <p>1.2 Je zakázáno spamovat stejnou zprávu více než 10 krát po sobě v chatu. (1 varování)</p>
-    <p>1.3 Je zakázáno využívat herní bugy (například duplikování). (1 až 2 varování)</p>
-    <!-- Pokračujte s dalšími pravidly -->
+    <br> 1.1 Je zakázáno používat clienty, cheaty, hack clienty, módy a datapacky, které by ulehčovali hru. 1 až 3 varování
+    <br>1.2 Je zakázáno spamovat stejnou zprávu více než 10 krát po sobě v chatu. 1 varování
+    <br>1.3 Je zakázáno využívat herní bugy (například duplikování). 1 až 2 varování
+   <br> 1.4 Létání s elytrou a nošení elytry jiným způsobem na spawnu je na vlastní nebezpečí, v některých oblastech se může stát, že je command block smaže. vlastní nebezpečí
+   <br> 1.5 Je zakázáno zabíjet hráče, kteří jsou AFK. 1 varování
+    <br>1.6 PvP pomocí krystalů je zakázáno. 1 varování
 
     <br>
     <br>
 
     <h2>Discord pravidla:</h2>
-    <p>2.1 Je zakázáno spamovat stejnou zprávu více než 15 krát po sobě a zahlcovat tak chat. (1 discord varování)</p>
-    <p>2.2 Je zakázáno propagovat jiné discord, nebo minecraft servery kdekoliv na tomto discord serveru, nebo propagovat v soukromých zprávách lidem přímo z tohoto serveru. (1 až 2 discord varování)</p>
-    <!-- Pokračujte s dalšími pravidly -->
-
+    <br> 2.1 Je zakázáno spamovat stejnou zprávu více než 15 krát po sobě a zahlcovat tak chat. 1 discord varování
+  <br>2.2 Je zakázáno propagovaní jiných discord, nebo minecraft serverů kdekoliv na tomto discord serveru, nebo propagování v soukromých zprávách lidem přímo z tohoto serveru (propagování ostatních věcí, které nemohou tomuto minecraft, nebo discord serveru konkurovat jsou povoleny, jsou to například sociální sítě - admin team však může beztrestně tyto reklamy mazat). 1 až 2 discord varování 
+  <br>
     <br>
     <br>
 
     <h2>Pravidla pro minihry - Survival, Box Survival a Skyblock:</h2>
-    <p>3.1 Je zakázáno ničení cizích staveb, zabíjení zvířat, která nejsou vaším majetkem, nebo pouštění zvířat, která nejsou vaším majetkem z ohrad. (1 až 3 varování)</p>
-    <p>3.2 Je zakázáno pokládání více bloků, které se rukou těží déle než 3 sekundy, nebo je jich položeno více než 30 na území jiného hráče. (1 až 2 varování)</p>
-    <!-- Pokračujte s dalšími pravidly -->
+    <p> <br> 3.1 Je zakázáno ničení cizích staveb, zabíjení zvířat, která nejsou vaším majetkem, nebo pouštění zvířat, která nejsou vaším majetkem z ohrad (stavba vždy patří tomu, kdo ji postavil). 1 až 3 varování
+        <br>3.2 Je zakázáno pokládání více bloků, které se rukou těží déle než 3 sekundy, nebo je jich položeno více než 30 na území jiného hráče. 1 až 2 varování
+       <br> 3.3 Je zakázáno zabíjení stejného hráče více něž 2 krát za minutu. 1 varování
+        <br>3.4 Je zakázáno zablokování jiného hráče bez možnosti opustit past. 1 varování
+       <br> 3.5 Je zakázáno opustit herní zónu (box survival: opuštění boxu, survival: opuštění herní zóny, což je více než 20000 bloků od spawnu survivalu, skyblock: opuštění herní zóny vyhrazené bariérami). 1 varování
+        <br>3.6 Je zakázáno krást z truhel umístěných v cizí stavbě. 1 až 3 varování
+       <br>3.7 Pokládání vzácných bloků v oblasti spawnu všech těchto miniher (méně než 15 bloků kolem spawnu) je na vlastní nebezpečí, můžeš se stát, že je command block smaže. vlastní nebezpečí 
 
     <br>
     <br>
 
     <h2>Pravidla pro války:</h2>
-    <p>Pravidla válek převyšují jiná pravidla. Více informací naleznete na discordu.</p>
-    <!-- Pokračujte s dalšími pravidly -->
+    <p><br> Pravidla válek převyšují jiná pravidla.
+        Válku dvou kolonií automaticky začne příslušník jedné kolonie slovním vyhlášením v chatu. Do války se volně může přidat každá kolonie, nebo hráč dle svého úmyslu na jakoukoliv stranu, platí pro něj však všechny pravidla válek. Druhá kolonie nemůže válku odmítnout.
+        Frekvence zabíjení hráčů nepřátelské kolonie je ve válce neomezená.
+        Válka může skončit kapitulací jedné z kolonií, dohodou nebo nuceným ukončením války (válka může trvat maximálně 1 hodinu).
+        <br>5.1 Při válce je zakázáno odpojování a teleportace v průběhu boje. Teleportace mimo boj (sebe i spojenců) je povolena, avšak jen jednou za 10 minut. 1 varování
+       <br> 5.2 Každý hráč, který byl přítomen při vyhlášení války má právo během války ukrást deset libovolných políček z bloků pro ukládání předmětů. Pokud ukradne více než deset políček, porušuje tím toto pravidlo. 1 až 3 varování
+      <br>  5.3 Každý hráč, který byl přítomen při vyhlášení války má povoleno zničit pouze 20 bloků za účelem nalezení skryté místnosti (výjimka platí pro sklo, diamantový blok, netheritový blok, maják, píst, lepivý píst, truhlu, endovou truhlu a násypku, které hráč ničit nesmí). 1 až 3 varování
+       <br> 5.4 Útok na hráče stojícího 5 a méně bloků okolo svého kolonistického warpu je zakázán. 1 varování
+        <br>5.5 Wither může být během války vyvolán jen jednou. 1 varování
+       <br> 5.6 Je zakázané vyhlašovat války od 22:00 do 11:00 středoevropského času a v den českých státních svátků. válka nebude platná
+        <br>5.7 Je zakázáno vyhlašovat válku kolonii, z které je na serveru připojeno jeden nebo žádný hráč. válka nebude platná
+       <br> 5.8 Během války je zakázáno měnit režim hry a ostatní příkazy (kromě již zmíněné teleportace, což jsou příkazy /warp /spawn a /tp, které jsou povoleny). 1 až 2 varování
+       <br> 5.9 Po ukončení jedné války nemůže kolonie vyhlašující dané války vyhlásit jinou válku po dobu 24 hodin a vyhlásit válku stejné kolonii po dobu 3 dní. válka nebude platná
 
     <br>
     <br>
