--- a/qrgenerator.html
+++ b/qrgenerator.html
@@ -1,28 +1,79 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>QR Code Generator</title>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
-</head>
-<body>
-  <input type="text" id="inputText" placeholder="Zadejte text pro QR kód">
-  <button onclick="generateQRCode()">Generovat QR kód</button>
-  <div id="qrcode"></div>
-
-  <script>
-    function generateQRCode() {
-      var textToEncode = document.getElementById("inputText").value;
-      var qrcode = new QRCode(document.getElementById("qrcode"), {
-        text: textToEncode,
-        width: 256,
-        height: 256,
-        colorDark: "#000000",
-        colorLight: "#ffffff",
-        correctLevel: QRCode.CorrectLevel.H
-      });
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Smilosův web!</title>
+<style>
+    body {
+        font-family: Segoe UI, sans-serif;
+        background-color: #f3f3f3;
+        margin: 0;
+        padding: 0;
     }
-  </script>
-</body>
-</html>
+    .container {
+        max-width: 600px;
+        margin: 50px auto;
+        padding: 20px;
+        background-color: #fff;
+        border: 1px solid #ccc;
+        border-radius: 5px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    }
+    .header {
+        text-align: center;
+        margin-bottom: 40px;
+    }
+    .header h1 {
+        color: #333;
+    }
+    .content {
+        padding: 20px 0;
+        text-align: center;
+    }
+    .footer {
+        text-align: center;
+        padding: 20px 0;
+        background-color: #333;
+        color: #fff;
+    }
+    button {
+        padding: 15px 40px;
+        margin: 10px;
+        font-size: 16px;
+        border: none;
+        cursor: pointer;
+        background-color: #fcbf49;
+        color: #fff;
+        border-radius: 5px;
+        transition: background-color 0.3s;
+    }
+    button:hover {
+        background-color: #f57c00;
+    }
+</style>
+</head>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>QR Code Generator</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
+  </head>
+  <body>
+    <input type="text" id="inputText" placeholder="Zadejte text pro QR kód">
+    <button onclick="generateQRCode()">Generovat QR kód</button>
+    <div id="qrcode"></div>
+  
+    <script>
+      function generateQRCode() {
+        var textToEncode = document.getElementById("inputText").value;
+        var qrcode = new QRCode(document.getElementById("qrcode"), {
+          text: textToEncode,
+          width: 256,
+          height: 256,
+          colorDark: "#000000",
+          colorLight: "#ffffff",
+          correctLevel: QRCode.CorrectLevel.H
+        });
+      }
+    </script>
+<body>
